--- a/combos.html
+++ b/combos.html
@@ -16,8 +16,8 @@
 		#grid a.panel {
 			float: left;
 			width: 33.3%;
-			height: 40px;
-			padding: 20px 0;
+			height: 20px;
+			padding: 60px 0;
 			display: inline-block;
 			text-align: center;
 			background-color: #eee;
@@ -38,11 +38,22 @@
 			background-color: #333;
 			color: #fff;
 		}
+		#combo {
+			position: absolute;
+			width: 100%;
+			text-align: center;
+			top: 40%;
+			color: blue;
+			font-weight: bold;
+			text-shadow: 2px 2px 0px #FFFFFF, -2px -2px 0px #FFFFFF, 2px -2px 0px #FFFFFF, -2px 2px 0px #FFFFFF;
+			font-size: 1.5em;
+		}
 		p#output {
 			width: 100%;
 			font-size: 10px;
 			font-family: monospace;
 		}
+
 	</style>
 
 	<script src="public/js/hammer.js/hammer.js" type="text/javascript" charset="utf-8" ></script>
@@ -55,26 +66,125 @@
 
 
 		$(document).ready(function() {
+
+			document.ontouchmove = function(e){ e.preventDefault(); }
+
 			$('a.panel').CCCCombo({
-				onCombo: function(combo) {
-					if (combo.move.length > 0) {
-						//console.log("CCCCombo!!! ", combo.move);
-						var output = combo.move.length + " --> ";
-						for (x in combo.move) {
-							output += combo.move[x].id + "[" + combo.move[x].dir + "], ";
-						}
-						if (combo.match) output += ' MOVES: ' + combo.matched;
-						$('#output').prepend( output  + "<br/>");
+				onCombo: output,
+				combos: [
+					{
+						id: "rH2",
+						desc: "Reverse RoundHouse!!",
+						moves: [
+							{dir: ["ldru", "ruld"]}
+						]
+					},
+					{
+						id: "rH",
+						desc: "RoundHouse!",
+						moves: [
+							{dir: ["lurd","rdlu"]}
+						]
+					},
+					{
+						id: "slr",
+						desc: "Simple left right",
+						moves: [
+							{dir: ["tap"], areas: ["mL"]},
+							{dir: ["tap"], areas: ["mR"]}
+						]
+					},
+					{
+						id: "ffx",
+						desc: "ForwardForward Punch!",
+						moves: [
+							{dir: ["r"]},
+							{dir: ["r"]},
+							{dir: ["tap"], areas: ["mR"]}
+						]
+					},
+					{
+						id: "all",
+						desc: "Generous regex", 
+						moves: [
+							{dir: [/[rlud]*]/]}
+						]
+					},
+					{
+						id: "lrl", 
+						desc: "Left Right Left!!", 
+						moves: [
+							{dir: ["lrl"]}
+						]
+					},
+					{
+						id: "uc", 
+						desc: "Uppercut!",
+						moves: [
+							{dir: ["u"], areas: ["bM"]}
+						]
+					},
+					{
+						id: "uc2", 
+						desc: "Double Uppercut!",
+						moves: [
+							{dir: ["u"], areas: ["bM"]},
+							{dir: ["u"], areas: ["bM"]}
+						]
+					},
+					{
+						id: "dc2", 
+						desc: "Downcut!",
+						moves: [
+							{dir: ["d"], areas: ["tM"]}
+						]
+					},
+					{
+						id: "dc2", 
+						desc: "Slam Down!!",
+						moves: [
+							{dir: ["d"], areas: ["tM"]},
+							{dir: ["d"], areas: ["tM"]}
+						]
 					}
-				}
+				]
 			});
+
+
+			function output (combo) {
+				if (combo.move.length > 0) {
+					//console.log("CCCCombo!!! ", combo.move);
+					var output = combo.move.length + " --> ";
+					var move = "";
+					for (x in combo.move) {
+						move += combo.move[x].id + "[" + combo.move[x].dir + "]";
+						if (typeof combo.move[x + 1] !== 'undefined') move += ", ";
+					}
+					output += move;
+					if (combo.match) output2 = output + move + ' MOVES: ' + combo.matched;
+					$('#output').prepend( output  + "<br/>");
+
+
+					if (combo.match) outputNormal(combo.matched);
+					else outputNormal(move)
+					
+				}
+			}
+
+			function outputNormal(s) {
+				$('#combo').text(s);
+				$('#combo').fadeIn(300);
+				window.setTimeout(function(){
+					$('#combo').fadeOut(500);
+				}, 1000);
+			}
 		});
 
 
 	</script>
 </head>
 <body>
-
+	<div id="combo"></div>
 	<div id="grid">
 		<a href="#" class="panel" data-combo-id="tL">0</a>
 		<a href="#" class="panel" data-combo-id="tM">1</a>
